--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -627,6 +627,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['CountryCode', 'Amount', 'Value', 'PricingStrategy', 'FraudResult']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numerical_columns= data_pro_new.get_numerical_columns(data)\n",
+    "numerical_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['TransactionId',\n",
+       " 'BatchId',\n",
+       " 'AccountId',\n",
+       " 'SubscriptionId',\n",
+       " 'CustomerId',\n",
+       " 'CurrencyCode',\n",
+       " 'ProviderId',\n",
+       " 'ProductId',\n",
+       " 'ProductCategory',\n",
+       " 'ChannelId',\n",
+       " 'TransactionStartTime']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categorical_columns = data_pro_new.get_categorical_columns(data)\n",
+    "categorical_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [],
