--- a/notebooks/RFMS.ipynb
+++ b/notebooks/RFMS.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,9 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from xverse.transformer import WOE\n",
+    "\n",
     "\n",
     "# Add the correct relative path to the scripts folder\n",
     "sys.path.append(os.path.abspath('../scripts'))\n",
@@ -29,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +219,7 @@
        "4    644  2018-11-15T03:34:21Z                2            0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +316,7 @@
        "4  CustomerId_2858       90         29   93400.00"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +363,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +527,7 @@
        "[22153 rows x 5 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -568,6 +571,166 @@
    "metadata": {},
    "source": [
     "WoE Binning for Recency, Frequency, and Monetary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Recency_bin  Frequency_bin  Monetary_bin\n",
+      "0            4              0             1\n",
+      "1            4              0             1\n",
+      "2            4              0             1\n",
+      "3            4              0             1\n",
+      "4            4              0             1\n",
+      "WoE for Recency_bin:\n",
+      "    Recency_bin\n",
+      "0     1.678762\n",
+      "1     1.678762\n",
+      "2     1.678762\n",
+      "3     1.678762\n",
+      "4     1.678762\n",
+      "WoE for Frequency_bin:\n",
+      "    Frequency_bin\n",
+      "0       0.004939\n",
+      "1       0.004939\n",
+      "2       0.004939\n",
+      "3       0.004939\n",
+      "4       0.004939\n",
+      "WoE for Monetary_bin:\n",
+      "    Monetary_bin\n",
+      "0      0.004653\n",
+      "1      0.004653\n",
+      "2      0.004653\n",
+      "3      0.004653\n",
+      "4      0.004653\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\befekadum\\Documents\\10x acadamy\\week6\\Credit-Scoring-Model-\\myvenv\\Lib\\site-packages\\xverse\\transformer\\_woe.py:187: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  X = X.fillna('NA')\n",
+      "c:\\Users\\befekadum\\Documents\\10x acadamy\\week6\\Credit-Scoring-Model-\\myvenv\\Lib\\site-packages\\pandas\\core\\arraylike.py:399: RuntimeWarning: divide by zero encountered in log\n",
+      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n",
+      "c:\\Users\\befekadum\\Documents\\10x acadamy\\week6\\Credit-Scoring-Model-\\myvenv\\Lib\\site-packages\\xverse\\transformer\\_woe.py:187: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  X = X.fillna('NA')\n",
+      "c:\\Users\\befekadum\\Documents\\10x acadamy\\week6\\Credit-Scoring-Model-\\myvenv\\Lib\\site-packages\\xverse\\transformer\\_woe.py:187: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  X = X.fillna('NA')\n",
+      "c:\\Users\\befekadum\\Documents\\10x acadamy\\week6\\Credit-Scoring-Model-\\myvenv\\Lib\\site-packages\\pandas\\core\\arraylike.py:399: RuntimeWarning: divide by zero encountered in log\n",
+      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n",
+      "c:\\Users\\befekadum\\Documents\\10x acadamy\\week6\\Credit-Scoring-Model-\\myvenv\\Lib\\site-packages\\xverse\\transformer\\_woe.py:187: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  X = X.fillna('NA')\n",
+      "c:\\Users\\befekadum\\Documents\\10x acadamy\\week6\\Credit-Scoring-Model-\\myvenv\\Lib\\site-packages\\xverse\\transformer\\_woe.py:187: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  X = X.fillna('NA')\n",
+      "c:\\Users\\befekadum\\Documents\\10x acadamy\\week6\\Credit-Scoring-Model-\\myvenv\\Lib\\site-packages\\pandas\\core\\arraylike.py:399: RuntimeWarning: divide by zero encountered in log\n",
+      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n",
+      "c:\\Users\\befekadum\\Documents\\10x acadamy\\week6\\Credit-Scoring-Model-\\myvenv\\Lib\\site-packages\\xverse\\transformer\\_woe.py:187: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  X = X.fillna('NA')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize WoE binning transformer\n",
+    "woe_transformer = WOE()\n",
+    "\n",
+    "# Bin the RFMS features using pd.cut()\n",
+    "rfm_binned = rfm.copy()\n",
+    "\n",
+    "# Ensure that the bins are correctly created for Recency, Frequency, and Monetary\n",
+    "rfm_binned['Recency_bin'] = pd.cut(rfm['Recency'], bins=5)\n",
+    "rfm_binned['Frequency_bin'] = pd.cut(rfm['Frequency'], bins=5)\n",
+    "rfm_binned['Monetary_bin'] = pd.cut(rfm['Monetary'], bins=5)\n",
+    "\n",
+    "# Initialize label encoder\n",
+    "le = LabelEncoder()\n",
+    "\n",
+    "# Encode the binned categories as numeric values\n",
+    "rfm_binned['Recency_bin'] = le.fit_transform(rfm_binned['Recency_bin'])\n",
+    "rfm_binned['Frequency_bin'] = le.fit_transform(rfm_binned['Frequency_bin'])\n",
+    "rfm_binned['Monetary_bin'] = le.fit_transform(rfm_binned['Monetary_bin'])\n",
+    "\n",
+    "\n",
+    "# Check if columns are correctly created\n",
+    "print(rfm_binned[['Recency_bin', 'Frequency_bin', 'Monetary_bin']].head())\n",
+    "\n",
+    "# Apply WoE binning only on 'Recency_bin'\n",
+    "try:\n",
+    "    woe_transformer_recency = WOE()\n",
+    "    rfm_woe_recency = woe_transformer_recency.fit_transform(rfm_binned[['Recency_bin']], rfm_binned['Risk'])\n",
+    "    print(\"WoE for Recency_bin:\\n\", rfm_woe_recency.head())\n",
+    "except KeyError as e:\n",
+    "    print(f\"KeyError for Recency_bin: {e}\")\n",
+    "\n",
+    "# Apply WoE binning only on 'Frequency_bin'\n",
+    "try:\n",
+    "    woe_transformer_frequency = WOE()\n",
+    "    rfm_woe_frequency = woe_transformer_frequency.fit_transform(rfm_binned[['Frequency_bin']], rfm_binned['Risk'])\n",
+    "    print(\"WoE for Frequency_bin:\\n\", rfm_woe_frequency.head())\n",
+    "except KeyError as e:\n",
+    "    print(f\"KeyError for Frequency_bin: {e}\")\n",
+    "\n",
+    "# Apply WoE binning only on 'Monetary_bin'\n",
+    "try:\n",
+    "    woe_transformer_monetary = WOE()\n",
+    "    rfm_woe_monetary = woe_transformer_monetary.fit_transform(rfm_binned[['Monetary_bin']], rfm_binned['Risk'])\n",
+    "    print(\"WoE for Monetary_bin:\\n\", rfm_woe_monetary.head())\n",
+    "except KeyError as e:\n",
+    "    print(f\"KeyError for Monetary_bin: {e}\")\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "WoE Binning: Weight of Evidence binning allows you to transform continuous variables like Recency, Frequency, and Monetary into bins. The WoE values for each bin show how predictive that bin is for distinguishing between good and bad customers. Positive WoE values suggest a higher likelihood of low-risk customers, while negative WoE values suggest a higher likelihood of high-risk customers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training data shape: (15507, 3), Testing data shape: (6646, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the features and target\n",
+    "X = rfm_binned[['Recency_bin', 'Frequency_bin', 'Monetary_bin']]  # Input features\n",
+    "y = rfm_binned['Risk']  # Target variable (high-risk/low-risk classification)\n",
+    "\n",
+    "# Split the data into training (70%) and testing (30%) sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "print(f\"Training data shape: {X_train.shape}, Testing data shape: {X_test.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "for the model and better GPU i used colab [RFMS.ipynb](https://drive.google.com/file/d/1mquk46sNpp3Peq-DuHAX1hCcaTa4ZX6V/view?usp=sharing)"
    ]
   }
  ],
