--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -264,27 +264,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       CountryCode        Amount         Value  PricingStrategy   FraudResult\n",
-      "count      95662.0  9.566200e+04  9.566200e+04     95662.000000  95662.000000\n",
-      "mean         256.0  6.717846e+03  9.900584e+03         2.255974      0.002018\n",
-      "std            0.0  1.233068e+05  1.231221e+05         0.732924      0.044872\n",
-      "min          256.0 -1.000000e+06  2.000000e+00         0.000000      0.000000\n",
-      "25%          256.0 -5.000000e+01  2.750000e+02         2.000000      0.000000\n",
-      "50%          256.0  1.000000e+03  1.000000e+03         2.000000      0.000000\n",
-      "75%          256.0  2.800000e+03  5.000000e+03         2.000000      0.000000\n",
-      "max          256.0  9.880000e+06  9.880000e+06         4.000000      1.000000\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CountryCode</th>\n",
+       "      <th>Amount</th>\n",
+       "      <th>Value</th>\n",
+       "      <th>PricingStrategy</th>\n",
+       "      <th>FraudResult</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>95662.0</td>\n",
+       "      <td>9.566200e+04</td>\n",
+       "      <td>9.566200e+04</td>\n",
+       "      <td>95662.000000</td>\n",
+       "      <td>95662.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>256.0</td>\n",
+       "      <td>6.717846e+03</td>\n",
+       "      <td>9.900584e+03</td>\n",
+       "      <td>2.255974</td>\n",
+       "      <td>0.002018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.233068e+05</td>\n",
+       "      <td>1.231221e+05</td>\n",
+       "      <td>0.732924</td>\n",
+       "      <td>0.044872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>256.0</td>\n",
+       "      <td>-1.000000e+06</td>\n",
+       "      <td>2.000000e+00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>256.0</td>\n",
+       "      <td>-5.000000e+01</td>\n",
+       "      <td>2.750000e+02</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>256.0</td>\n",
+       "      <td>1.000000e+03</td>\n",
+       "      <td>1.000000e+03</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>256.0</td>\n",
+       "      <td>2.800000e+03</td>\n",
+       "      <td>5.000000e+03</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>256.0</td>\n",
+       "      <td>9.880000e+06</td>\n",
+       "      <td>9.880000e+06</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       CountryCode        Amount         Value  PricingStrategy   FraudResult\n",
+       "count      95662.0  9.566200e+04  9.566200e+04     95662.000000  95662.000000\n",
+       "mean         256.0  6.717846e+03  9.900584e+03         2.255974      0.002018\n",
+       "std            0.0  1.233068e+05  1.231221e+05         0.732924      0.044872\n",
+       "min          256.0 -1.000000e+06  2.000000e+00         0.000000      0.000000\n",
+       "25%          256.0 -5.000000e+01  2.750000e+02         2.000000      0.000000\n",
+       "50%          256.0  1.000000e+03  1.000000e+03         2.000000      0.000000\n",
+       "75%          256.0  2.800000e+03  5.000000e+03         2.000000      0.000000\n",
+       "max          256.0  9.880000e+06  9.880000e+06         4.000000      1.000000"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(data.describe())"
+    "data.describe()"
    ]
   },
   {
